<resources>
    <string name="app_name">Indori Namkeens</string>

    <string name="hint_name">Full Name</string>
    <string name="hint_mobile">Mobile</string>
    <string name="hint_address">Address</string>

    <string name="err_msg_name">Enter your full name</string>
    <string name="err_msg_address">Enter your address</string>
    <string name="err_msg_mobile">Enter a valid Mobile Number</string>
    <string name="title_activity_dashboard">DashboardActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="techno_twit_solutions">Indori Namkeens</string>
    <string name="contact_detail">30, Aanand Bazaar,\nOpposite Greater Kailash Hospital, \nIndore</string>
    <string name="contact_detail2">Contact: +91 7828186541, 9039541539, 8889660678 \n\nEmail: support@indorinamkeen.com \n\nFacebook: www.fb.com/indorinamkeen \n\nTwitter: www.twitter.com/indorinamkeen \n\nLinkedin: www.linkedin.com/company/indorinamkeen</string>


    <string name="action_settings">Settings</string>
    <string name="title_activity_cart">CartActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
